--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<ng4-loading-spinner></ng4-loading-spinner>
 <h1>Anunturi: </h1>
 <div class="custom__container">
   <div *ngFor="let ad of userService.ads | paginate: {itemsPerPage: 5, currentPage: page}; let i = index">
