date picker dependecy

--- a/src/app/add-details/add-details.component.html
+++ b/src/app/add-details/add-details.component.html
@@ -17,3 +17,6 @@
     </agm-map>
 </div>
 </div>
+<ngb-timepicker [(ngModel)]="time"></ngb-timepicker>
+<hr>
+<pre>Selected time: {{time | json}}</pre>
