--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -41,7 +41,7 @@
     <li class="nav-item dropdown">
       <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">            Dropdown on Right</a>
       <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" routerLink="/calendar">Calendar</a>
         <a class="dropdown-item" href="#">Another action with a lot of text inside of an item</a>
       </div>
     </li>
