--- a/src/app/add/add.component.html
+++ b/src/app/add/add.component.html
@@ -1,3 +1,4 @@
+<ng4-loading-spinner></ng4-loading-spinner>
 <mat-dialog-content>
 <div class="container">
   <h2>Adauga Anunt <i class="fa fa-arrow-circle-up"></i></h2>
