--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,22 +8,7 @@
       <a class="nav-link" routerLink="/home"><span class="fa fa-home"></span>Home</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" routerLink="/sales">V&#226;nz&#259;ri</a>
-    </li>
-    <li class="nav-item">
-      <button class="btn btn-outline-warning" type="button" (click)="addNewAd()">Adaug&#259; Anun&#539;</button>
-    </li>
-
-    <!-- Dropdown -->
-    <li class="nav-item dropdown">
-      <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-        Dropdown link
-      </a>
-      <div class="dropdown-menu">
-        <a class="dropdown-item" href="#">Link 1</a>
-        <a class="dropdown-item" href="#">Link 2</a>
-        <a class="dropdown-item" href="#">Link 3</a>
-      </div>
+      <button class="btn btn-outline-warning" type="button" *ngIf="userService.currentUser.email"(click)="addNewAd()">Adaug&#259; Anun&#539;</button>
     </li>
   </ul>
   <ul class="navbar-nav ml-auto">
