--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,6 +17,8 @@
       <mat-card-header>
         <mat-card-title>{{ ad.title}}</mat-card-title>
         <mat-card-subtitle>{{ ad.adType }} - {{ad.adItemType}}</mat-card-subtitle>
+        <img src="../../assets/casa.jpg" *ngIf="ad.adItemType == 'Casa'" mat-card-avatar>
+        <img src="../../assets/bloc.jpg" *ngIf="ad.adItemType == 'Apartament'" mat-card-avatar>
       </mat-card-header>
       <mat-card-content>Pret: {{ ad.price }} <span class="fa fa-euro"></span></mat-card-content>
       <img mat-card-image height="500px"  [src]="ad.image">
