--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,11 @@
     <li class="nav-item">
       <button class="btn btn-outline-warning" type="button" *ngIf="userService.currentUser.email"(click)="addNewAd()">Adaug&#259; Anun&#539;</button>
     </li>
+    <li class="nav-item" *ngIf="userService.currentUser.token">
+      <a routerLink="/myAds">
+        <button class="btn btn-outline-warning" type="button">Anun&#539;urile Mele</button>
+      </a>
+    </li>
   </ul>
   <ul class="navbar-nav ml-auto">
     <li class="nav-item">
