Home Component Fix#1

--- a/src/app/calendar/calendar.component.html
+++ b/src/app/calendar/calendar.component.html
@@ -169,6 +169,10 @@
         (click)="events.splice(index, 1); refresh.next()">
         Delete
       </button>
+      <button class="btn btn-success"
+        (click)="confirmChanges()" >
+        Confirm Changes
+      </button>
     </td>
   </tr>
   </tbody>
