--- a/src/app/add-details/add-details.component.html
+++ b/src/app/add-details/add-details.component.html
@@ -2,22 +2,29 @@
 <div class="add__details__container">
   <h2 class="ad__title">{{userService.adDetails.title}}</h2>
   <hr class="hr__line">
-  <h3 class="text__label">Poze Anunt: </h3>
   <div class="price__carousel">
     <div class="my__carousel">
       <carousel>
         <div *ngFor="let image of images">
           <slide>
-            <img [src]="image" class="carousel__item img-thumbnail">
+            <img [src]="domSanitizer.bypassSecurityTrustResourceUrl(image)" class="carousel__item img-thumbnail">
           </slide>
         </div>
       </carousel>
     </div>
     <div class="buttons">
       <button class="btn btn-success price">Pret: {{userService.adDetails.price}} <span class="fa fa-euro"></span></button>
-      <button class="btn btn-danger favourite">Adauga la Favorite&nbsp;<mat-icon>favorite_border</mat-icon></button>
+      <button class="btn btn-danger favourite" (click)="saveFavorite()">Adauga la Favorite&nbsp;<mat-icon>favorite_border</mat-icon></button>
       <button class="btn btn-info favourite">E-mail: {{userService.adDetails.userEmail}}&nbsp;<mat-icon>email</mat-icon></button>
+      <button class="btn btn-info favourite">Telefon: 0{{adUserPhone}} <mat-icon>phone</mat-icon></button>
     </div>
+  </div>
+  <div class="img__label__container" *ngIf="userService.currentUser.token && userService.currentUser.email === userService.adDetails.userEmail">
+    <button mat-button mat-raised-button class="img__save__button" color="accent"
+            (click)="saveImages()">Salveaza Imaginile <mat-icon>archive</mat-icon></button>
+    <input (change)="getFileDetails($event)" id="fileInput" name="file" type="file" class="ng-hide" multiple>
+    <button mat-button mat-raised-button color="accent"
+            (click)="replaceImages()" class="img__replace_button">Inlocuieste Imaginile <mat-icon>cloud_upload</mat-icon></button>
   </div>
   <br>
   <div class="description__container">
@@ -30,12 +37,24 @@
         </mat-panel-title>
         <mat-panel-description class="mat__panel__description"><mat-icon>info</mat-icon></mat-panel-description>
       </mat-expansion-panel-header>
-      <div>
-        <p>Descriere: {{userService.adDetails.description}}
-      </div>
+        <div *ngIf="userService.currentUser.email === userService.adDetails.userEmail">
+          <mat-form-field class="descriere">
+            <textarea type="text" placeholder="Descriere..." matInput matTextareaAutosize matAutosizeMinRows=5 matAutosizeMaxRows=10
+                      [(ngModel)]="adDetailsChanges.description" autocomplete="off"></textarea>
+          </mat-form-field>
+        </div>
+        <div *ngIf="userService.currentUser.email !== userService.adDetails.userEmail || !userService.currentUser.email">
+          <p>Descriere: {{userService.adDetails.description}}
+        </div>
       <mat-action-row>
-        <button mat-button color="warn" (click)="prevStep()">Predecesor</button>
+        <button mat-button color="warn" (click)="prevStep()">Inchide</button>
         <button mat-button color="primary" (click)="nextStep()">Urmator</button>
+        <button mat-button mat-raised-button color="accent"
+                *ngIf="userService.currentUser.email === userService.adDetails.userEmail" (click)="saveChanges(step)">Salveaza Modificarile
+        </button>
+        <button mat-button mat-raised-button color="accent"
+                *ngIf="userService.currentUser.email === userService.adDetails.userEmail" (click)="cancelChanges(step)">Anuleaza Modificarile
+        </button>
       </mat-action-row>
       </mat-expansion-panel>
       <mat-expansion-panel [expanded]="step === 2" (opened)="setStep(2)"
@@ -46,26 +65,213 @@
           </mat-panel-title>
           <mat-panel-description class="mat__panel__description"><mat-icon>assignment</mat-icon></mat-panel-description>
         </mat-expansion-panel-header>
-        <div class="expansion__panel__content">
-          <p>Numar Camere: {{userService.adDetails.rooms}}
-          <p>Suprafata: {{userService.adDetails.surface}}
-          <p>Suprafata teren:{{userService.adDetails.areaSurface}}
-          <p>An constructie: {{userService.adDetails.yearBuilt}}
+        <div *ngIf="userService.adDetails.adItemType === 'Casa'">
+            <div *ngIf="userService.currentUser.email === userService.adDetails.userEmail">
+              <div class="expansion__panel__content__logged">
+                <mat-form-field class="form__field__input">
+                  <label>
+                    <input type="number" matInput placeholder="Pret..." [(ngModel)]="adDetailsChanges.price" autocomplete="off">
+                  </label>
+                </mat-form-field>
+                <mat-form-field>
+                  <label>
+                    <input type="number" matInput placeholder="Numar camere..." [(ngModel)]="adDetailsChanges.rooms" autocomplete="off">
+                  </label>
+                </mat-form-field>
+                <mat-form-field>
+                  <label>
+                    <input type="number" matInput placeholder="Suprafata..." [(ngModel)]="adDetailsChanges.surface" autocomplete="off">
+                  </label>
+                </mat-form-field>
+                <mat-form-field>
+                  <label>
+                    <input type="number" matInput placeholder="Suprafata utila..." [(ngModel)]="adDetailsChanges.areaSurface" autocomplete="off">
+                  </label>
+                </mat-form-field>
+                <mat-form-field>
+                  <mat-select placeholder="Tip anunt..." matInput class="material__select" [(ngModel)]="adDetailsChanges.adType">
+                    <mat-option value="Inchiriere">Inchiriere</mat-option>
+                    <mat-option value="Vanzare">Vanzare</mat-option>
+                  </mat-select>
+                </mat-form-field>
+                <mat-form-field>
+                  <label>
+                    <input type="number" matInput placeholder="An constructie..." [(ngModel)]="adDetailsChanges.yearBuilt" autocomplete="off">
+                  </label>
+                </mat-form-field>
+              </div>
+            </div>
+            <div *ngIf="userService.currentUser.email !== userService.adDetails.userEmail || !userService.currentUser.email">
+              <div class="expansion__panel__content">
+                <p>Pret(euro): {{userService.adDetails.price}}
+                <p>Numar Camere: {{userService.adDetails.rooms}}
+                <p>Suprafata: {{userService.adDetails.surface}}(m<sup>3</sup>)
+                <p>Suprafata teren: {{userService.adDetails.areaSurface}} (m<sup>3</sup>)
+                <p>Tip Proprietate: {{userService.adDetails.adItemType}}
+                <p>An constructie: {{userService.adDetails.yearBuilt}}
+              </div>
+            </div>
+          <mat-action-row>
+            <button mat-button color="warn" (click)="prevStep()">Predecesor</button>
+            <button mat-button color="primary" (click)="nextStep()">Final</button>
+            <button mat-button mat-raised-button color="accent"
+                    *ngIf="userService.currentUser.email === userService.adDetails.userEmail" (click)="saveChanges(step)">Salveaza Modificarile
+            </button>
+            <button mat-button mat-raised-button color="accent"
+                    *ngIf="userService.currentUser.email === userService.adDetails.userEmail" (click)="cancelChanges(step)">Anuleaza Modificarile
+            </button>
+          </mat-action-row>
         </div>
-        <mat-action-row>
-          <button mat-button color="warn" (click)="prevStep()">Predecesor</button>
-          <button mat-button color="primary" (click)="nextStep()">Final</button>
-        </mat-action-row>
+        <!---->
+        <div *ngIf="userService.adDetails.adItemType === 'Apartament'">
+          <div *ngIf="userService.currentUser.email === userService.adDetails.userEmail">
+            <div class="expansion__panel__content__logged">
+              <mat-form-field class="form__field__input apartemnt__detail__form">
+                <label>
+                  <input type="number" matInput placeholder="Pret..." [(ngModel)]="adDetailsChanges.price" autocomplete="off">
+                </label>
+              </mat-form-field>
+              <mat-form-field class="form__field__input apartemnt__detail__form">
+                <label>
+                  <input type="number" matInput placeholder="Numar camere..." [(ngModel)]="adDetailsChanges.rooms" autocomplete="off">
+                </label>
+              </mat-form-field>
+              <mat-form-field class="form__field__input apartemnt__detail__form">
+                <label>
+                  <input type="number" matInput placeholder="Suprafata..." [(ngModel)]="adDetailsChanges.surface" autocomplete="off">
+                </label>
+              </mat-form-field>
+              <mat-form-field class="form__field__input apartemnt__detail__form">
+                <label>
+                  <input type="number" matInput placeholder="Confort..." [(ngModel)]="adDetailsChanges.comfort" autocomplete="off">
+                </label>
+              </mat-form-field>
+              <mat-form-field class="form__field__input apartemnt__detail__form">
+                <mat-select placeholder="Compartimentare..." matInput class="material__select" [(ngModel)]="adDetailsChanges.partitioning">
+                  <mat-option value="Decomandat">Decomandat</mat-option>
+                  <mat-option value="Semidecomandat">Semidecomandata</mat-option>
+                  <mat-option value="Necomandat">Necomandata</mat-option>
+                  <mat-option value="Vagon">Vagon</mat-option>
+                  <mat-option value="Circular">Circular</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-form-field class="form__field__input apartemnt__detail__form">
+                <mat-select placeholder="Tip anunt..." matInput class="material__select" [(ngModel)]="adDetailsChanges.adType">
+                  <mat-option value="Inchiriere">Inchiriere</mat-option>
+                  <mat-option value="Vanzare">Vanzare</mat-option>
+                </mat-select>
+              </mat-form-field>
+              <mat-form-field class="form__field__input apartemnt__detail__form">
+                <label>
+                  <input type="text" matInput placeholder="Etaj..." pattern="(^Parter$)|(^Demisol$)|(^[0-9]{1,3}$)" [(ngModel)]="adDetailsChanges.floorLevel" autocomplete="off">
+                </label>
+              </mat-form-field>
+              <mat-form-field class="form__field__input apartemnt__detail__form">
+                <label>
+                  <input type="number" matInput placeholder="An constructie..." [(ngModel)]="adDetailsChanges.yearBuilt" autocomplete="off">
+                </label>
+              </mat-form-field>
+              <p class="form__field__input apartemnt__detail__form"></p>
+            </div>
+          </div>
+          <div *ngIf="userService.currentUser.email !== userService.adDetails.userEmail || !userService.currentUser.email">
+            <div class="expansion__panel__content__apartment">
+              <p class="apartemnt__detail">Pret(euro): {{userService.adDetails.price}}
+              <p class="apartemnt__detail">Numar Camere: {{userService.adDetails.rooms}}
+              <p class="apartemnt__detail">Suprafata: {{userService.adDetails.surface}}(m<sup>3</sup>)
+              <p class="apartemnt__detail">Confort: {{userService.adDetails.comfort}}
+              <p class="apartemnt__detail">Compartimentare: {{userService.adDetails.partitioning}}
+              <p class="apartemnt__detail">Tip Proprietate: {{userService.adDetails.adItemType}}
+              <p class="apartemnt__detail" *ngIf="userService.adDetails.floorLevel !== '0'">Etaj: {{userService.adDetails.floorLevel}}
+              <p class="apartemnt__detail__last__element">An constructie: {{userService.adDetails.yearBuilt}}
+              <p></p>
+            </div>
+          </div>
+          <mat-action-row>
+            <button mat-button color="warn" (click)="prevStep()">Predecesor</button>
+            <button mat-button color="primary" (click)="nextStep()">Final</button>
+            <button mat-button mat-raised-button color="accent"
+                    *ngIf="userService.currentUser.email === userService.adDetails.userEmail" (click)="saveChanges(step)">Salveaza Modificarile
+            </button>
+            <button mat-button mat-raised-button color="accent"
+                    *ngIf="userService.currentUser.email === userService.adDetails.userEmail" (click)="cancelChanges(step)">Anuleaza Modificarile
+            </button>
+          </mat-action-row>
+        </div>
       </mat-expansion-panel>
     </mat-accordion>
   </div>
   <br>
-  <h3 class="map__label">Locatie: </h3>
+  <h3 class="map__label">Locatie: {{this.address}}</h3>
   <div class="map__class">
-      <agm-map [latitude]="lat" [longitude]="lng" [scrollwheel]="true" [fullscreenControl]="true" [zoom]="zoom">
+      <agm-map [latitude]="lat" [longitude]="lng" [scrollwheel]="true" [fullscreenControl]="true" (mapClick)="onChoseLocation($event)" [zoom]="zoom">
         <agm-marker [latitude]="lat" [longitude]="lng" *ngIf="lat !=0 && lng != 0"></agm-marker>
       </agm-map>
   </div>
-  <br>
+  <div>
+    <form [formGroup]="newLocation" class="search__location__formGroup" [hidden]="hidden">
+      <div class="form-group search__location">
+        <input placeholder="Localizare..." autocorrect="on" autocapitalize="on" spellcheck="on" type="text" class="form-control" #search formControlName="searchControl">
+      </div>
+    </form>
+  </div>
+  <div class="map__buttons">
+    <button *ngIf="changeLocation === false && userService.currentUser.email === userService.adDetails.userEmail"
+            mat-button mat-raised-button color="accent" (click)="changeTheLocation()">Alege o noua locatie</button>
+    <button *ngIf="changeLocation === true" class="map__button" mat-button mat-raised-button color="accent" (click)="cancelLocationChanges()">Anuleaza</button>
+    <button *ngIf="changeLocation === true"  mat-button mat-raised-button color="accent" (click)="saveLocationChanges()">Salveaza Locatia</button>
+    <button *ngIf="userService.currentUser.email !== userService.adDetails.userEmail" mat-button mat-raised-button color="accent"
+            (click)="googleMapsDirection()">Traseu</button>
+  </div>
+  <div class="review__container">
+    <div class="box">
+      <h3>Review-uri: </h3>
+      <hr>
+      <div *ngIf="!editReview">
+        <div *ngFor="let review of reviews; let i = index" class="reviews">
+          <div class="comment__first__row">
+            <p>{{review.username}} - {{review.userType}}</p>
+            <p>Data adaugarii: {{reviewsDates[i] | date:'dd/MM/yyyy'}}</p>
+          </div>
+          <p>{{review.comment}}</p>
+          <div class="review__rating__container">
+            <rating [(ngModel)]="review.rating" [max]=5 [readonly]="true"></rating>
+            <div *ngIf="userService.currentUser.email === review.mail">
+              <button mat-icon-button color="primary" (click)="editUserReview(review)"><mat-icon>create</mat-icon></button>
+              <button mat-icon-button color="warn"><mat-icon (click)="deleteUserReview(review)">delete</mat-icon></button>
+            </div>
+          </div>
+        </div>
+      </div>
+       <div *ngIf="editReview">
+         <div *ngFor="let review of reviews; let i = index" class="reviews">
+           <div class="comment__first__row">
+             <p>{{review.username}} - {{review.userType}}</p>
+             <p>Data adaugarii: {{reviewsDates[i] | date:'dd/MM/yyyy'}}</p>
+           </div>
+           <mat-form-field class="descriere">
+            <textarea type="text" placeholder="Editeaza comentariu..." matInput matTextareaAutosize matAutosizeMinRows=5 matAutosizeMaxRows=10
+                      [(ngModel)]="reviewChanges.comment" autocomplete="off"></textarea>
+           </mat-form-field>
+           <div class="review__rating__container">
+             <rating [(ngModel)]="reviewChanges.rating" [max]=5></rating>
+             <div>
+               <button mat-raised-button mat-button="" color="primary" (click)="editUserReviewSave(review)">Salveaza</button>
+               <button mat-raised-button mat-button="" color="warn" (click)="editReviewCancel(review)">Anuleaza</button>
+             </div>
+           </div>
+        </div>
+       </div>
+       <hr>
+      <div *ngIf="reviews.length === 0">
+        <p>Anuntul nu are momentan review-uri.</p>
+      </div>
+      <div>
+        <label for="comment_box">Adauga comentariu si rating: <rating [(ngModel)]="rating" [max]=5></rating></label>
+        <textarea id="comment_box" [(ngModel)]="comment" rows=5 cols=20 placeholder="Adauga comentariu..." class="form-control comment"></textarea>
+        <br>
+        <button class="btn btn-info" (click)="addReview()">Adauga Review</button>
+      </div>
+    </div>
+  </div>
 </div>
-
