--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,47 +1,35 @@
-<div class="row enrollForm">
-  <div class="col-md-4 col-sm-4 col-xs-12"></div>
-  <div class="col-md-4 col-sm-4 col-xs-12">
+<mat-dialog-content>
+<div class="container">
+  <h1 class="title"><i class="fa fa-user"></i> Creare cont: </h1>
     <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
-      <h1><i class="fa fa-user"></i> Creare cont: </h1>
-      <div class="form-group">
-        <label for="username">Nume utilizator: </label>
-        <input type="text" id="username" name="username" formControlName="username" class="form-control">
-        <span *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched"
-              class="help-block">Introduceti un nume de utilizator!</span>
+      <mat-form-field>
+        <input type="text" matInput placeholder="Nume Utilizator..." formControlName="username">
+        <mat-error *ngIf="!signupForm.get('username').valid && signupForm.get('username').touched">Introduceti un nume de utilizator!</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input placeholder="E-mail..." type="email" matInput formControlName="email">
+        <mat-error *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched">Adresa de e-mail nu este valida!</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input placeholder="Parola..." matInput type="password" formControlName="password" (keyup)="keyPress($event)">
+        <mat-error *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched">Introduceti o parola!</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input placeholder="Confirmare parola..." matInput type="password" formControlName="confirm_password">
+        <mat-error *ngIf="!signupForm.get('confirm_password').valid && signupForm.get('confirm_password').touched">Parola introdusa nu coincide!</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <input placeholder="Telefon..." matInput type="tel" formControlName="phone">
+        <mat-error *ngIf="!signupForm.get('phone').valid && signupForm.get('phone').touched">Introduceti un numar de telefon valid!</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-select matInput formControlName="user_type">
+          <mat-option *ngFor="let t of user_types" [value]="t">{{ t }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <div class="custom__button__position">
+        <button [disabled]="!signupForm.valid" class="btn btn-success custom__button" type="submit">Sign Up</button>
       </div>
-      <div class="form-group">
-        <label for="email">E-mail: </label>
-        <input type="email" id="email" name="email" formControlName="email" class="form-control">
-        <span *ngIf="!signupForm.get('email').valid && signupForm.get('email').touched"
-              class="help-block">Introduceti o adresa de e-mail valida!</span>
-      </div>
-      <div class="form-group">
-        <label for="password">Parola: </label>
-        <input type="password" id="password" name="password" formControlName="password" class="form-control" (keyup)="keyPress($event)">
-        <span *ngIf="!signupForm.get('password').valid && signupForm.get('password').touched"
-              class="help-block">Introduceti o parola!</span>
-      </div>
-      <div class="form-group">
-        <label for="confirm_assword">Confirmare Parola: </label>
-        <input type="password" id="confirm_assword" name="confirm_password"
-               formControlName="confirm_password" class="form-control">
-        <span *ngIf="!signupForm.get('confirm_password').valid && signupForm.get('confirm_password').touched"
-              class="help-block">Parola introdusa nu coincide!</span>
-      </div>
-      <div class="form-group">
-        <label for="phone">Telefon: </label>
-        <input type="tel"  id="phone" name="phone" formControlName="phone" class="form-control">
-        <span *ngIf="!signupForm.get('phone').valid && signupForm.get('phone').touched"
-              class="help-block">Introduceti un numar de telefon valid!</span>
-      </div>
-      <div class="form-group">
-        <label for="type">Tip utilizator: </label>
-        <select id="type" name="type" class="form-control" formControlName="user_type">
-          <option *ngFor="let t of user_types" [ngValue]="t">{{ t }}</option>
-        </select>
-      </div>
-      <button [disabled]="!signupForm.valid" class="btn btn-success form-control custom__button" type="submit">Sign Up</button>
     </form>
-    <div class="col-md-4 col-sm-4 col-xs-12"></div>
-  </div>
 </div>
+</mat-dialog-content>
